0.4.0 ref2link update 2